TRYING to fix BG issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ a {
   height: 180px;
   width: 180px;
   background-color: rgba(255,0,0,1);
-  position: static;
+  position: fixed;
   top: 85px;
   left: 50%;
   transform: translate(-50%, 0);
